<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BuddyBase</string>
    <string name="facebook_app_id">273712087780069</string>
    <string name="fb_login_protocol_scheme">fb273712087780069</string>
    <string name="hello">hello</string>
    <string name="petQuestion">Pick a fav pet</string>
    <string name="doggo">Doggo</string>
    <string name="cat">Cat</string>
    <string name="musicQuestion">Pick a fav genre of music</string>
    <string name="hip_hop">Hip-Hop</string>
    <string name="rock">Rock</string>
    <string name="jazz">Jazz</string>
    <string name="classical">Classical</string>
    <string name="pop">Pop</string>
    <string name="k_pop">K-pop</string>
    <string name="movieQuestion">Pick a fav genre of movie</string>
    <string name="horror">Horror</string>
    <string name="romance">Romance</string>
    <string name="action">Action</string>
    <string name="documentary">Documentary</string>
    <string name="comedy">Comedy</string>
    <string name="personalityQuestion">Pick your personality</string>
    <string name="veryIntrov">Very Introverted</string>
    <string name="introverted">introverted</string>
    <string name="extroverted">extroverted</string>
    <string name="flavorQuestion">Pick a fav flavor</string>
    <string name="savory">Savory</string>
    <string name="sweet">Sweet</string>
    <string name="personality">Pick a fav friend personality</string>
    <string name="calm">Calm</string>
    <string name="energetic">Energetic</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Sign Up</string>
    <string name="or">OR</string>
    <string name="like">Like</string>
    <string name="remove">Remove</string>
<<<<<<< HEAD
    <string name="recommended_friends_friend_type_format">"is looking for %s friends."</string>
=======
    <string name="submit">submit</string>
    <string name="you_are_all_set_msg">you are all set msg</string>
    <string name="recommended_friends_friend_type_format">"%s is looking for %s friends."</string>
>>>>>>> ryan-profile
    <string name="sign_in">Log In</string>
    <string name="tvLoginInstead">Already have an account?</string>
    <string name="tvSignUpInstead">Don\'t have an account?</string>
    <string name="view_profile">View Profile</string>
    <string name="liked">Liked</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_name">Weather</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="msg_token_fmt">FCM registration Token: %s</string>
    <string name="log_token">Log Token</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the         weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the         FCM registration token to logcat.</string>
    <string name="send_notification">Send Notification</string>
</resources>